--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-vite",
   "private": true,
+  "homepage": "https://github.com/evanjo03/react-vite",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
