--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-vite",
   "private": true,
-  "homepage": "https://github.com/evanjo03/react-vite",
+  "homepage": "https://evanjo03.github.io/react-vite/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
